--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,12 +7,7 @@
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -23,7 +18,7 @@
 
 /* ✅ เพิ่ม custom styles สำหรับ dark mode ถ้าจำเป็น */
 body {
-  @apply bg-gray-200 text-gray-900;;
+  @apply bg-gray-200 text-gray-900;
 }
 
 .dark body {
